k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: pong-frontend
    labels:
      app: pong-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pong-frontend
  template:
    metadata:
      labels:
        app: pong-frontend
    spec:
      containers:
      - name: queue-frontend
        image: benjamintf1/queue-frontend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
