k8s/backend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pong-backend
  annotations:
    cloud.google.com/app-protocols: '{"frontend":"HTTPS","frontend":"HTTP"}'
    service.alpha.kubernetes.io/app-protocols: '{"frontend":"HTTPS","frontend":"HTTP"}'
spec:
    type: NodePort
    selector:
      app: pong-backend
    ports:
      - name: backend
        protocol: TCP
        port: 8080
        targetPort: 8080
