k8s/frontend-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pong-frontend
  annotations:
    cloud.google.com/app-protocols: '{"frontend":"HTTPS","frontend":"HTTP"}'
    service.alpha.kubernetes.io/app-protocols: '{"frontend":"HTTPS","frontend":"HTTP"}'
spec:
    type: NodePort
    selector:
      app: pong-frontend
    ports:
      - name: frontend
        protocol: TCP
        port: 8080
        targetPort: 3000
